--- a/.gitignore
+++ b/.gitignore
@@ -4,21 +4,42 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+firebase-debug.log*
+firebase-debug.log
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependencias (¡NUNCA SUBIR ESTO!)
+node_modules/
+
+# Carpeta de producción (Se genera sola con npm run build)
+dist/
+dist-ssr/
+
 *.local
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
+
+# Archivos de sistema
 .DS_Store
+Thumbs.db
+
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+.env
+
+# Configuración de entorno local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Cache de Firebase (¡IMPORTANTE NO SUBIRLO!)
+.firebase/
